--- a/app/resources/poketcg/poketcg.module.css
+++ b/app/resources/poketcg/poketcg.module.css
@@ -50,16 +50,22 @@
   /* text-align: center; */
 }
 
-/* .item {
-  display: flex;
-} */
+.item {
+  padding-left: 2rem;
+  /* padding-top: 2rem; */
+  /* text-align: center; */
+}
 
 .div {
-  height: auto;
+  height: 350px;
   width: auto;
-  padding-left: 10rem;
-  padding-bottom: 2rem;
-  padding-top: 2rem;
+  padding-left: 14rem;
+  padding-top: 0rem;
+  /* padding-bottom: 2rem; */
+  /* padding-top: 1rem; */
   text-align: left;
-  /* align-items: space-between; */
+
+  /* justify-content: flex-end; */
+  border: solid 1px black;
+  background-color: orange;
 }
